VFS-3828 Added storageName to storage credentials definition
